--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body::-webkit-scrollbar {
 }
 
 body {
+  overflow-x: hidden;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
@@ -797,4 +798,98 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+.faq-pad h1 {
+  font-family: Manrope;
+  font-size: 1.7rem;
+  font-weight: 800;
+  line-height: 40px;
+  letter-spacing: 0.0015em;
+  text-align: left;
+  color: #03015d;
+}
+.faq-background {
+  background-image: url(/images/Rectangle00.png);
+  height: 20rem;
+  padding-top: 0.5rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.faq-background h2 {
+  font-family: Product Sans;
+  font-size: 2.5rem;
+  padding: 5rem 5rem;
+  font-weight: 700;
+  color: #ffffff;
+  justify-content: center;
+  align-items: center;
+}
+.faq-pad {
+  padding: 3rem 5rem;
+}
+.faq-arrk {
+  background-color: #f6f6f6;
+  border-radius: 8px;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+.faq-arrk h2 {
+  font-family: Manrope;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22px;
+  margin-right: auto;
+}
+.faq-line h2 {
+  color: #000000;
+}
+.faq-arrow {
+  display: flex;
+  gap: 1rem;
+  height: 2rem;
+  /* justify-content: center; */
+  align-items: center;
+}
+.faq-arrow h2 {
+  color: #393939;
+}
+.faq-line {
+  display: block;
+}
+.faq-flex {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+}
+.arrow-faq {
+  cursor: pointer;
+  width: 1rem;
+  height: 1rem;
+}
+.arrow-faq img {
+  width: 100%;
+  height: 100%;
+}
+.faq-block {
+  display: flex;
+  gap: 1rem;
+}
+.arrow-para {
+  padding-left: 3rem;
+  padding-right: 2rem;
+  color: #393939;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.0016em;
+}
+.flex-insur {
+  margin-top: 2rem;
+}
+.flex-general {
+  margin-bottom: 2rem;
+}
+.price {
+  margin-top: 2rem;
 }
