--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0 2rem 0 5rem;
+  overflow-x: hidden;
 }
 
 .swiper-slide {
@@ -32,6 +33,7 @@ body {
   justify-content: center;
   align-items: center;
   /* margin: 0 2rem; */
+  overflow: hidden;
 }
 
 .swiper-slide img {
