--- a/src/index.css
+++ b/src/index.css
@@ -986,7 +986,8 @@ footer {
     left: 0;
     right: 0;
     z-index: 1;
-    height: 75%;
+    /* height: 100%; */
+    align-items: center;
   }
 
   .nav-items.open {
